Responsive Experience Section

--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
         
 
         <div class="paragrafo">
-        <p class="p1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,  rem aperiam eaque ipsa, quae ab illo inventore veritatis e quasi architecto beatae vitae dictasunt, explicabo. Nemo enim ipsam voluptaet</p>
-        <p class="p2"> quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam m aperiam eaque ipsa, quae a illo inventore veritatis etquasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsamvoluptatem, quia voluptas sit....Sed ut perspiciavoluptatem, quia voluptas sit</p>
+        <p class="p1">Student of Systems Analysis and Development, seeking a position in the technology field where I can apply
+            my skills in logic, problem-solving, and user experience.</p>
+        <p class="p2"> I have a strong interest in technology and am
+            committed to continuous learning. I am eager to contribute to innovative projects and add value to the team
+            with my quick learning ability and dedication.</p>
         </div>
 
         <div class="work">
