Updates - General Responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <p><span>Design</span> that connects, <span>code</span> that transforms</p>
             <div class="chat">
-                <a class="wpp" href="https://wa.me/5551999159715" target="_blank"><img src="/IMG/Wpp Icon.svg" alt="">LET’S CHAT ON WHATSAPP</a>
+                <a class="wpp" href="https://wa.me/5551999159715" target="_blank"><div class="wpp-icon"></div>LET’S CHAT ON WHATSAPP</a>
                 <a class="email" href="mailto:tiagoamaraltic@gmail.com" target="_blank">OR SEND ME AN EMAIL</a>
             </div>
         </div>
@@ -145,7 +145,7 @@
                 <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="">
                 <p>2023-</p>
                 <span class="divisor"></span>
-                <h1>ACCOUNTS PAYABLE</h1>
+                <h1>FRONT-END DEVELOPER JR</h1>
                 <img class="arrow" src="/IMG/Arrow icon.svg" alt="">
             </div>
 
