--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- MENU -->
     <nav class="bg-menu">
-        <img class="logo" src="/IMG/Logo.svg" alt="Logo">
+        <a href="#home"><img class="logo" src="/IMG/Logo.svg" alt="Logo"></a>
         <div class="container-menu">
             <ul class="menu">
                 <li class="about"><a href="#about">About</a></li>
@@ -42,7 +42,7 @@
 
         <!-- HOME -->
 
-    <section class="bg-home">
+    <section class="bg-home" id="home">
         <div class="idioma">
             <select id="language" name="language" onchange="changeLanguage()">
                 <option value="en">EN</option>
@@ -231,6 +231,35 @@
         </div>
 
     </section>
+
+        <!-- FOOTER -->
+
+    <footer>
+        <div class="linha">
+            <div class="pontas"></div>
+            <div class="main"></div>
+            <div class="pontas"></div>
+        </div>
+
+        <div class="bg-footer">
+            <div class="wid-footer"><a href="#home"><img class="logo-footer" src="/IMG/Logo.svg" alt="Logo"></a></div>
+            <span class="divisor-footer"></span>
+            <div class="redes-footer">
+                <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg"></a>
+                <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg"></a>
+                <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg"></a>
+            </div>
+            <span class="divisor-footer"></span>
+            <div class="chat-footer">
+                <a class="wpp-footer" href="https://wa.me/5551999159715" target="_blank"><div class="wpp-icon-footer"></div>CONTACT BY WHATSAPP</a>
+                <a class="email-footer" href="mailto:tiagoamaraltic@gmail.com" target="_blank"><div class="mail-icon-footer"></div>SEND ME AN EMAIL</a>
+            </div>
+        </div>
+        <div class="copy">
+            <p class="copy-text">Todos os direitos reservados &copy; 2025 </p>
+        </div>
+
+    </footer>
 
 
 
