--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conheça o Web Portfólio de Tiago Amaral, UX/UI Designer e Front-end Developer. Explore meus projetos de design centrado no usuário e desenvolvimento web com foco em experiência intuitiva e design responsivo. Descubra como posso criar soluções inovadoras para transformar sua presença digital.">
     <title>Tiago Amaral | Web Portifólio</title>
     <link rel="shortcut icon" href="/IMG/Logo.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
 
         <!-- MENU -->
     <nav class="bg-menu">
-        <a href="#home"><img class="logo" src="/IMG/Logo.svg" alt="Logo"></a>
+        <a href="#home"><img class="logo" src="/IMG/Logo.svg" alt="Logo do site"></a>
         <div class="container-menu">
             <ul class="menu">
                 <li class="about"><a href="#about">About</a></li>
@@ -51,12 +52,12 @@
         </div>
 
         <div class="home">
-            <img id="perfil" src="/IMG/Perfil.png" alt="">
-            <img id="funcao" src="/IMG/Funcao_br.svg" alt="">
+            <img id="perfil" src="/IMG/Perfil.png" alt="Foto de perfil do Tiago">
+            <img id="funcao" src="/IMG/Funcao_br.svg" alt="Descritivo: 'Desenvolvedor e ux/ui designer'">
             <div class="redes">
-                <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg"></a>
-                <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg"></a>
-                <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg"></a>
+                <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg" alt="ícone do Linkedin"></a>
+                <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg" alt="ícone do Instagram"></a>
+                <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg" alt="ícone do Github"></a>
             </div>
             <p><span>Design</span> that connects, <span>code</span> that transforms</p>
             <div class="chat">
@@ -71,7 +72,7 @@
     <section class="bg-about" id="about">
         <div class="bg-id">
             <div class="foto">
-                <img src="/IMG/foto circle.png" alt="">
+                <img src="/IMG/foto circle.png" alt="Foto de Tiago">
             </div>
             <div class="dados">
                 <h1>Tiago Amaral</h1>
@@ -82,32 +83,32 @@
             <div class="linha-id"></div>
                 <div class="id">
                     <div class="icon-id">
-                        <img src="/IMG/mail icon.svg" alt="">
+                        <img src="/IMG/mail icon.svg" alt="Ícone de email">
                     </div> 
                     <h2>Email</h2>
                     <p>tiagoamaraltic@gmail.com</p>
 
                     <div class="icon-id">
-                        <img src="/IMG/phone icon.svg" alt="">
+                        <img src="/IMG/phone icon.svg" alt="Ícone de telefone">
                     </div> 
                     <h2>Phone</h2>
                     <p>+55 51 9 9915-9715</p>
 
                     <div class="icon-id">
-                        <img src="/IMG/calendar icon.svg" alt="">
+                        <img src="/IMG/calendar icon.svg" alt="Ícone de data">
                     </div> 
                     <h2>Birthday</h2>
                     <p>December 26, 2000</p>
 
                     <div class="icon-id">
-                        <img src="/IMG/location icon.svg" alt="">
+                        <img src="/IMG/location icon.svg" alt="Ícone de localização">
                     </div> 
                     <h2>Location</h2>
                     <p>Novo Hamburgo / RS - Brazil</p>
                 </div>       
         </div>
         <div class="img-about">
-            <img class="about-img" src="/IMG/about.svg" alt="">
+            <img class="about-img" src="/IMG/about.svg" alt="Descritivo: 'Sobre mim">
         </div>
         
 
@@ -122,12 +123,12 @@
         <div class="work">
             <h1>What I’m Doing</h1>
             <ul>
-                <li class="icon_item"><img src="/IMG/html-5 icon.svg" alt=""><span class="texto-icon">HTML</span></li>
-                <li class="icon_item"><img src="/IMG/css3 icon.svg" alt=""><span class="texto-icon">CSS</span></li>
-                <li class="icon_item"><img src="/IMG/javascript icon.svg" alt=""><span class="texto-icon">JavaScript</span></li>
-                <li class="icon_item"><img src="/IMG/typescript icon.svg" alt=""><span class="texto-icon">TypeScript</span></li>
-                <li class="icon_item"><img src="/IMG/photoshop icon.svg" alt=""><span class="texto-icon">Photoshop</span></li>
-                <li class="icon_item"><img src="/IMG/figma icon.svg" alt=""><span class="texto-icon">Figma</span></li>
+                <li class="icon_item"><img src="/IMG/html-5 icon.svg" alt="Ícone do HTML 5"><span class="texto-icon">HTML</span></li>
+                <li class="icon_item"><img src="/IMG/css3 icon.svg" alt="Ícone do CSS 3"><span class="texto-icon">CSS</span></li>
+                <li class="icon_item"><img src="/IMG/javascript icon.svg" alt="Ícone do JavaScript"><span class="texto-icon">JavaScript</span></li>
+                <li class="icon_item"><img src="/IMG/typescript icon.svg" alt="Ícone do TypeScript"><span class="texto-icon">TypeScript</span></li>
+                <li class="icon_item"><img src="/IMG/photoshop icon.svg" alt="Ícone do Photoshop"><span class="texto-icon">Photoshop</span></li>
+                <li class="icon_item"><img src="/IMG/figma icon.svg" alt="Ícone do Figma"><span class="texto-icon">Figma</span></li>
             </ul>
          </div>
     </section>
@@ -136,35 +137,35 @@
 
     <section class="bg-exp" id="experience">
         <div class="exp-img">
-            <img src="/IMG/experiecia.svg" alt="">
+            <img src="/IMG/experiecia.svg" alt="Descritivo: 'experiência'">
         </div>
 
         <div class="jobs">
             <div class="job-card" id="arezzo">
                 <h2>AREZZO&CO INTERNATIONAL BUSINESS</h2>
-                <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="">
+                <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="Logo da Arezzo&Co">
                 <p>2023-</p>
                 <span class="divisor"></span>
                 <h1>FRONT-END DEVELOPER JR</h1>
-                <img class="arrow" src="/IMG/Arrow icon.svg" alt="">
+                <img class="arrow" src="/IMG/Arrow icon.svg" alt="Botão de Seta">
             </div>
 
             <div class="job-card" id="south">
                 <h2>SOUTH BIKE</h2>
-                <img class="logo-empresa" src="/IMG/south logo.png" alt="">
+                <img class="logo-empresa" src="/IMG/south logo.png" alt="Logo da South Bikes">
                 <p>2021-2023</p>
                 <span class="divisor"></span>
                 <h1>ACCOUNTS RECEIVABLE</h1>
-                <img class="arrow" src="/IMG/Arrow icon.svg" alt="">
+                <img class="arrow" src="/IMG/Arrow icon.svg" alt="Botão de Seta">
             </div>
 
             <div class="job-card" id="im">
                 <h2>INSTITUTO MIX DE PROFISSÕES</h2>
-                <img class="logo-empresa" src="/IMG/im logo.png" alt="">
+                <img class="logo-empresa" src="/IMG/im logo.png" alt="Logo do Instituto Mix">
                 <p>2018-2021</p>
                 <span class="divisor"></span>
                 <h1>COURSES INSTRUCTOR</h1>
-                <img class="arrow" src="/IMG/Arrow icon.svg" alt="">
+                <img class="arrow" src="/IMG/Arrow icon.svg" alt="Botão de Seta">
             </div>            
         </div>
     </section>
@@ -175,12 +176,12 @@
     <section class="bg-edu" id="education">
         <div class="edu-container">
             <div class="edu-img">
-                <img src="/IMG/education.svg" alt="">
+                <img src="/IMG/education.svg" alt="Descritivo: 'Education'">
             </div>
 
             <div class="degrees">
                 <div class="header-edu">
-                    <img class="edu-icon" src="/IMG/degree icon.svg" alt="">
+                    <img class="edu-icon" src="/IMG/degree icon.svg" alt="Ícone de educação">
                     <span class="title">DEGREES</span>
                 </div>
                 <div class="deg-card">
@@ -202,7 +203,7 @@
 
             <div class="languages">
                 <div class="header-edu">
-                    <img class="edu-icon" src="/IMG/language icon.svg" alt="">
+                    <img class="edu-icon" src="/IMG/language icon.svg" alt="Ícone de idioma">
                     <span class="title">LANGUAGES</span>
                 </div>
                 <h1>English <span class="bar">/</span> <span class="level">Advanced</span></h1>
@@ -212,7 +213,7 @@
 
         <div class="courses">
             <div class="header-curso">
-                <img class="edu-icon" src="/IMG/courses icon.svg" alt="">
+                <img class="edu-icon" src="/IMG/courses icon.svg" alt="Ícone de cursos">
                 <span class="title">CURSOS INTENSIVOS</span>
             </div>
 
@@ -245,9 +246,9 @@
             <div class="wid-footer"><a href="#home"><img class="logo-footer" src="/IMG/Logo.svg" alt="Logo"></a></div>
             <span class="divisor-footer"></span>
             <div class="redes-footer">
-                <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg"></a>
-                <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg"></a>
-                <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg"></a>
+                <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg" alt="Logo do Linkedin"></a>
+                <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg" alt="Logo do instagram"></a>
+                <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg" alt="Logo do github"></a>
             </div>
             <span class="divisor-footer"></span>
             <div class="chat-footer">
