--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <section class="bg-home" id="home">
         <div class="idioma">
-            <select id="language" name="language" onchange="changeLanguage()">
-                <option value="en">EN</option>
-                <option value="pt">BR</option>
+            <select id="language" name="language" onchange="changeLanguage()" aria-label="Trocar o idioma">
+                <option value="en" aria-label="Inglês">EN</option>
+                <option value="pt" aria-label="Português brasileiro">BR</option>
               </select>
         </div>
 
