--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- MENU -->
     <nav class="bg-menu">
-        <a href="#home"><img class="logo" src="/IMG/Logo.svg" alt="Logo do site"></a>
+        <a href="#home"><img class="logo" src="/IMG/Logo.svg" alt="Logo do site" loading="lazy"></a>
         <div class="container-menu">
             <ul class="menu">
                 <li class="about"><a href="#about">About</a></li>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="home">
-            <img id="perfil" src="/IMG/Perfil.png" alt="Foto de perfil do Tiago">
+            <img id="perfil" src="/IMG/Perfil.png" alt="Foto de perfil do Tiago" loading="lazy">
             <img id="funcao" src="/IMG/Funcao_br.svg" alt="Descritivo: 'Desenvolvedor e ux/ui designer'">
             <div class="redes">
                 <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg" alt="ícone do Linkedin"></a>
@@ -73,7 +73,7 @@
     <section class="bg-about" id="about">
         <div class="bg-id">
             <div class="foto">
-                <img src="/IMG/foto circle.png" alt="Foto de Tiago">
+                <img src="/IMG/foto circle.png" alt="Foto de Tiago" loading="lazy">
             </div>
             <div class="dados">
                 <h1>Tiago Amaral</h1>
@@ -144,7 +144,7 @@
         <div class="jobs">
             <div class="job-card" id="arezzo">
                 <h2>AREZZO&CO INTERNATIONAL BUSINESS</h2>
-                <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="Logo da Arezzo&Co">
+                <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="Logo da Arezzo&Co" loading="lazy">
                 <p>2023-</p>
                 <span class="divisor"></span>
                 <h1>FRONT-END DEVELOPER JR</h1>
@@ -153,7 +153,7 @@
 
             <div class="job-card" id="south">
                 <h2>SOUTH BIKE</h2>
-                <img class="logo-empresa" src="/IMG/south logo.png" alt="Logo da South Bikes">
+                <img class="logo-empresa" src="/IMG/south logo.png" alt="Logo da South Bikes" loading="lazy">
                 <p>2021-2023</p>
                 <span class="divisor"></span>
                 <h1>ACCOUNTS RECEIVABLE</h1>
@@ -162,7 +162,7 @@
 
             <div class="job-card" id="im">
                 <h2>INSTITUTO MIX DE PROFISSÕES</h2>
-                <img class="logo-empresa" src="/IMG/im logo.png" alt="Logo do Instituto Mix">
+                <img class="logo-empresa" src="/IMG/im logo.png" alt="Logo do Instituto Mix" loading="lazy">
                 <p>2018-2021</p>
                 <span class="divisor"></span>
                 <h1>COURSES INSTRUCTOR</h1>
@@ -220,12 +220,12 @@
 
             <div class="carousel">
                 <div class="carousel-slides">
-                  <div class="slide"><img src="#" alt="Slide 1"> <span class="curso-nome">UI for Begginers</span> <span class="horas">36h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 2"><span class="curso-nome">Html and Css</span><span class="horas">18h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 3"><span class="curso-nome">Javascript</span><span class="horas">63h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 1"><span class="curso-nome">Typescript</span><span class="horas">16h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 2"><span class="curso-nome">CSS Flexbox</span><span class="horas">8h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 3"><span class="curso-nome">CSS Grid Layout</span><span class="horas">9h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 1" loading="lazy"> <span class="curso-nome">UI for Begginers</span> <span class="horas">36h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 2" loading="lazy"><span class="curso-nome">Html and Css</span><span class="horas">18h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 3" loading="lazy"><span class="curso-nome">Javascript</span><span class="horas">63h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 1" loading="lazy"><span class="curso-nome">Typescript</span><span class="horas">16h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 2" loading="lazy"><span class="curso-nome">CSS Flexbox</span><span class="horas">8h</span></div>
+                  <div class="slide"><img src="#" alt="Slide 3" loading="lazy"><span class="curso-nome">CSS Grid Layout</span><span class="horas">9h</span></div>
                 </div>
                 <button class="prev slide-button" onclick="moveSlide(-1)">&#10094;</button>
                 <button class="next slide-button" onclick="moveSlide(1)">&#10095;</button>
