--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg" alt="ícone do Instagram"></a>
                 <a href="https://github.com/tiagoamaral07" target="_blank"><img src="/IMG/Github Icon.svg" alt="ícone do Github"></a>
             </div>
-            <p><span>Design</span> that connects, <span>code</span> that transforms</p>
+            <p id="typedText">
+                <span class="highlighted">Design</span> that connects, <span class="highlighted">code</span> that transforms!<span id="cursor">|</span>
+            </p>
+            
             <div class="chat">
                 <a class="wpp" href="https://wa.me/5551999159715" target="_blank"><div class="wpp-icon"></div>LET’S CHAT ON WHATSAPP</a>
                 <a class="email" href="mailto:tiagoamaraltic@gmail.com" target="_blank">OR SEND ME AN EMAIL</a>
@@ -255,10 +258,7 @@
         <div class="copy">
             <p class="copy-text">Todos os direitos reservados &copy; 2025 </p>
         </div>
-
     </footer>
-
-
-
+    <script src="/script.js"></script>
 </body>
 </html>
