--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="home">
             <img id="perfil" src="/IMG/Perfil.png" alt="Foto de perfil do Tiago" loading="lazy">
-            <img id="funcao" src="/IMG/Funcao_br.svg" alt="Descritivo: 'Desenvolvedor e ux/ui designer'">
+            <img id="funcao" src="/IMG/Funcao_ing.svg" alt="Descritivo: 'Desenvolvedor e ux/ui designer'">
             <div class="redes">
                 <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg" alt="ícone do Linkedin"></a>
                 <a href="https://www.instagram.com/tiag0_amaral" target="_blank"><img src="/IMG/Insta Icon.svg" alt="ícone do Instagram"></a>
@@ -136,7 +136,7 @@
 
     <section class="bg-exp" id="experience">
         <div class="exp-img">
-            <img src="/IMG/experiecia.svg" alt="Descritivo: 'experiência'">
+            <img src="/IMG/experiece.svg" alt="Descritivo: 'experiência'">
         </div>
 
         <div class="jobs">
@@ -145,7 +145,7 @@
                 <img class="logo-empresa" src="/IMG/arezzo logo.png" alt="Logo da Arezzo&Co" loading="lazy">
                 <p>2023-</p>
                 <span class="divisor"></span>
-                <h1>FRONT-END DEVELOPER JR</h1>
+                <h1>ACCOUNTS PAYABLE</h1>
                 <img class="arrow" src="/IMG/Arrow icon.svg" alt="Botão de Seta">
             </div>
 
@@ -185,17 +185,17 @@
                 </div>
                 <div class="deg-card">
                     <div class="ads">
-                         <h2>TECNÓLOGO</h2>
-                         <h1>Análise e Desenvolvimento de Sistemas</h1>
+                         <h2>TECHNOLOGIST</h2>
+                         <h1>Systems Analysis and Development</h1>
                          <p>Universidade Feevale</p>
-                         <span>Em andamento</span>
+                         <span>In progress</span>
                      </div>
 
                      <div class="physical">
-                           <h2>LICENCIATURA</h2>
-                            <h1>Educação Física</h1>
+                           <h2>BACHELOR'S DEGREE</h2>
+                            <h1>Physical Education</h1>
                           <p>Anhanguera Educacional</p>
-                          <span>Concluído / 2022</span>
+                          <span>Completed / 2022</span>
                      </div>
                  </div> 
             </div>
@@ -213,7 +213,7 @@
         <div class="courses">
             <div class="header-curso">
                 <img class="edu-icon" src="/IMG/courses icon.svg" alt="Ícone de cursos">
-                <span class="title">CURSOS INTENSIVOS</span>
+                <span class="title">INTENSIVE COURSES</span>
             </div>
 
             <div class="carousel">
@@ -256,7 +256,7 @@
             </div>
         </div>
         <div class="copy">
-            <p class="copy-text">Todos os direitos reservados &copy; 2025 </p>
+            <p class="copy-text">All rights reserved &copy; 2025 </p>
         </div>
     </footer>
     <script src="/script.js"></script>
