--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="copy">
-            <p class="copy-text">Todos os direitos reservados &copy; 2025 </p>
+            <p class="copy-text">All rights reserved &copy; 2025 </p>
         </div>
     </footer>
 
