New files added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Portifólio, site, Tiago Amaral, github, Front-end, Developer, Desenvolvedor, designer">
+    <meta name="keywords" content="Portfólio, site, Tiago Amaral, github, Front-end, Developer, Desenvolvedor, designer">
     <meta name="description" content="Conheça o Web Portfólio de Tiago Amaral, UX/UI Designer e Front-end Developer. Explore meus projetos de design centrado no usuário e desenvolvimento web com foco em experiência intuitiva e design responsivo. Descubra como posso criar soluções inovadoras para transformar sua presença digital.">
-    <title>Tiago Amaral | Web Portifólio</title>
+    <title>Tiago Amaral | Web Portfólio</title>
     <link rel="shortcut icon" href="/IMG/Logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
 </head>
