--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="home">
-            <img id="perfil" src="/IMG/Perfil.png" alt="Foto de perfil do Tiago" loading="lazy">
+            <img id="perfil" src="/IMG/Perfil_.png" alt="Foto de perfil do Tiago" loading="lazy">
             <img id="funcao" src="/IMG/Funcao_ing.svg" alt="Descritivo: 'Desenvolvedor e ux/ui designer'">
             <div class="redes">
                 <a href="https://www.linkedin.com/in/tiagoamaral2612/" target="_blank"><img src="/IMG/Linkedin icon.svg" alt="ícone do Linkedin"></a>
@@ -75,7 +75,7 @@
             </div>
             <div class="dados">
                 <h1>Tiago Amaral</h1>
-                <a href="/IMG/Tiago Amaral_Resume2025.pdf" download="Tiago Amaral | 2025">
+                <a href="/IMG/Tiago Amaral 2025 - Resume" download="Tiago Amaral | 2025">
                     <button class="download-btn">DOWNLOAD CV</button>
                   </a>
             </div>
