--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         
 
         <div class="paragrafo">
-        <p class="p1">Student of Systems Analysis and Development, seeking a position in the technology field where I can apply
-            my skills in logic, problem-solving, and user experience.</p>
-        <p class="p2"> I have a strong interest in technology and am
-            committed to continuous learning. I am eager to contribute to innovative projects and add value to the team
-            with my quick learning ability and dedication.</p>
+        <p class="p1">Frontend Developer in training, focused on creating modern, responsive, and accessible interfaces. Experienced in
+HTML, CSS, JavaScript, and UI/UX principles.</p>
+        <p class="p2"> Seeking an opportunity to apply my technical skills in developing
+efficient solutions, contributing to agile teams and challenging projects. Committed to continuous learning and
+best development practices.</p>
         </div>
 
         <div class="work">
@@ -168,6 +168,72 @@
             </div>            
         </div>
     </section>
+
+    <div class="modal-exp" id="arezzoco">
+        <div class="modal-content">
+            <h1>Responsibilities:</h1>
+            <p>&times;</p>
+            <div class="back-list">
+                <ul class="duties">
+                    <li>Direct contact with the international market and brand managers
+    from the group abroad.</li>
+                    <li>Management of credit card reconciliation, ensuring exact matching
+    between statements and internal records.</li>
+                    <li>Daily use of English for communication and financial reporting.</li>
+                    <li>Monitoring and managing credit limits, ensuring compliance with
+    company policies.</li>
+                    <li>Classification and entry of expenses into the SAP Concur system,
+    ensuring accuracy in records.</li>
+                    <li>Performing bank and intercompany reconciliations, optimizing the
+    financial flow.</li>
+                </ul> 
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="modal-exp" id="southbike">
+        <div class="modal-content">
+            <h1>Responsibilities:</h1>
+            <p>&times;</p>
+            <div class="back-list">
+                <ul class="duties">
+                    <li>Credit analysis, negotiation with clients, and order invoicing.</li>
+                    <li>Support and assistance to customers from various regions of
+    Brazil on banking platforms.</li>
+                    <li>Data entry and updates in the Sidcom system.</li>
+                    <li>Preparation of financial reports, monitoring delinquency, and
+    cash flow.</li>
+                    <li>Communication and collaboration with leadership to optimize
+    financial processes.</li>
+                </ul>
+            </div> 
+        </div>
+    </div>
+
+    <div class="modal-exp" id="mix">
+        <div class="modal-content">
+            <h1>Responsibilities:</h1>
+            <p>&times;</p>
+            <div class="back-list">
+                <ul class="duties">
+                    <li>Conducted classes in IT, English, and design to students of
+    various levels.</li>
+                    <li>Provided technical support for the internal network and
+    educational platforms.</li>
+                    <li>Created digital content and instructional materials to support
+    classroom and remote learning.</li>
+                    <li>Assisted the financial department with administrative and
+    operational support tasks.</li>
+                </ul> 
+            </div>
+        </div>
+    </div>
+
+
+
    
 
         <!-- EDUCATION -->
