--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@ best development practices.</p>
 
             <div class="carousel">
                 <div class="carousel-slides">
-                  <div class="slide"><img src="#" alt="Slide 1" loading="lazy"> <span class="curso-nome">UI for Begginers</span> <span class="horas">36h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 2" loading="lazy"><span class="curso-nome">Html and Css</span><span class="horas">18h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 3" loading="lazy"><span class="curso-nome">Javascript</span><span class="horas">63h</span></div>
-                  <div class="slide"><img src="#" alt="Slide 1" loading="lazy"><span class="curso-nome">Typescript</span><span class="horas">16h</span></div>
+                  <div class="slide"><img src="IMG/ui_certificate.png" alt="Slide 1" loading="lazy"> <span class="curso-nome">UI for Begginers</span> <span class="horas">34h</span></div>
+                  <div class="slide"><img src="IMG/html_certificate.png" alt="Slide 2" loading="lazy"><span class="curso-nome">Html and Css</span><span class="horas">46h</span></div>
+                  <div class="slide"><img src="IMG/grid_certificate.png" alt="Slide 3" loading="lazy"><span class="curso-nome">Grid Layout</span><span class="horas">10h</span></div>
+                  <div class="slide"><img src="IMG/flexbox_certificate.png" alt="Slide 1" loading="lazy"><span class="curso-nome">Flexbox</span><span class="horas">6h</span></div>
                   <div class="slide"><img src="#" alt="Slide 2" loading="lazy"><span class="curso-nome">CSS Flexbox</span><span class="horas">8h</span></div>
                   <div class="slide"><img src="#" alt="Slide 3" loading="lazy"><span class="curso-nome">CSS Grid Layout</span><span class="horas">9h</span></div>
                 </div>
